# Contador-de-Carros

./: LICENSE  Makefile  README.md  pyproject.toml
Contador_de_Carros/: pyproject.toml
docs/: README.md  Transfer Learning.docx
src/app/: __main__.py  params.txt
src/notebooks/: Example.ipynb
src/scripts/: exemplo_xyz.py
