[tool.poetry]
name = "python-repository-template"
version = "0.1.0"
description = "A Python repository template."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12.1"
yolov5 = "7.0.13"
opencv-python = "4.8.0.76"
numpy = "1.26.4"
matplotlib = "3.8.4"

[tool.poetry.group.dev.dependencies]
notebook = "^7.1.2"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
